syntax = "proto3";

option go_package = "hello/hello";

package helloworld.request_degraded;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  string status = 2;
}
